fix memory dashboard height issue, keept hight up the tree to box in dashboard, decide at different box types how to deal with overflow

--- a/src/style/charts.module.css
+++ b/src/style/charts.module.css
@@ -26,9 +26,9 @@
 }
 
 .elementWrapper{
-    flex: 1 1 fit-content;
+    /* flex: 1 1 fit-content; */
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-Content: center;
@@ -38,9 +38,10 @@
 .chartContainer{
     display: flex;
     justify-content: center;
-    flex: 1 1 0;
+    /* flex: 1 1 auto; */
     overflow: hidden;
-    /* height: 100%; */
+    /* max-height: fit-content; */
+    height: 100%;
 }
 
 .monacoEditorContainer{
